# trade_engine

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
include/libengine/: Connection.h  Engine.h  OrderBookProcessor.h
src/: CMakeLists.txt
src/libengine/: CMakeLists.txt  Connection.cpp  Engine.cpp  OrderBookProcessor.cpp
src/trade_engine/: CMakeLists.txt  trade_engine.cpp
tests/: CMakeLists.txt  basic_functionality_tests.h  cuncurrent_tests.h  invalid_api_usage_tests.h  tests.cpp
